<resources>
    <string name="app_name">Metrología agua y servicio</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ingresar">Ingresar</string>
    <string name="pruebas">Pruebas</string>
    <string name="revisiones">Revisiones</string>
    <string name="imprimibles">Imprimibles</string>
    <string name="aguas_municipales">\nAguas municipales</string>
    <string name="laboratorio_movil">Laboratorio móvil</string>
    <string name="menu_principal">Menú principal</string>
    <string name="prueba_de_medidor">Prueba de medidor</string>
    <string name="revisar_registros">Revisar e imprimir registros</string>
    <string name="exportar_registros">Exportar registros</string>
    <string name="imprimir">Imprimir</string>
    <string name="salir">Salir</string>
    <string name="registros">Registros</string>
    <!--    Exportation text info-->
    <string name="info_de_exportacion">Al presionar el botón <b>"Exportar"</b> Se creará un archivo el cual contendrá todos los registros actuales del dispositivo.<br /> <br />La nueva ubicación de este archivo por defecto será la carpeta <b>/ Descargas</b>, sin embargo, puede elegir cualquier otra ruta.</string>
    <string name="exportar">Exportar</string>
    <string name="ingrese_registro">Ingrese nombre del registro:</string>
    <string name="fecha">Fecha</string>
    <string name="operador">Operador</string>
    <string name="direccion">Dirección</string>
    <string name="n_contrato">Número de contrato</string>
    <string name="usuario">Usuario</string>
    <string name="marca">Marca</string>
    <string name="serial">Serial</string>
    <string name="calibre">Calibre</string>
    <string name="clase_metrologica">Clase metrológica</string>
    <string name="nuevo_o_usado">Nuevo o usado</string>
    <string name="foto">Foto</string>
    <string name="q1">Q1</string>
    <string name="q2">Q2</string>
    <string name="nueva_prueba">Nueva prueba</string>

    <!--    Measures table-->
    <string name="lectura_final_l">Lectura final <br /> <b>[L]</b></string>
    <string name="tiempo_seg">Tiempo <br /> <b>[Seg]</b></string>
    <string name="aforo_real">Aforo real <br /> <b>[L]</b></string>
    <string name="temp_agua_c">Temperatura del agua <br /> <b>[Cº]</b></string>
    <string name="temp_ambiente_c">Temperatura ambiente <br /> <b>[Cº]</b></string>
    <string name="presi_n_de_trabajo_kpa">Presión de trabajo <br /> <b>[Kpa]</b></string>
    <string name="lectura_inicial_l">Lectura inicial <br /> <b>[L]</b></string>
    <string name="lectura_inicial_l2">Lectura inicial <br /> <b>[mts 3]</b></string>
    <string name="lectura_m">Lectura <br /> <b>[mts 3]</b></string>
    <string name="humedad_relativa">Humedad relativa <br /> <b>[%]</b></string>
    <string name="resultado_q2">Resultado Q2</string>
    <string name="resultado_q1">Resultado Q1</string>
    <string name="resultado">Resultado:\n</string>
    <string name="measure_proofs">Prueba de medidor</string>
    <string name="specifications">Especificaciones medidor instalado</string>
    <string name="new_specifications">Especificaciones medidor Nuevo</string>
    <string name="fecha_r">Fecha:</string>
    <string name="operador_r">Operador:</string>
    <string name="usuario_r">Usuario:</string>
    <string name="direcci_n_r">Dirección:</string>
    <string name="n_contrato_r">Número de contrato:</string>
    <string name="marca_r">Marca:</string>
    <string name="serial_r">Serial:</string>
    <string name="calibre_r">Calibre:</string>
    <string name="clase_metrol_gica_r">Clase metrológica:</string>
    <string name="estado_r">Estado:</string>
    <string name="mediciones">Mediciones</string>
    <string name="resultados">Resultados</string>
    <string name="god_exportation">¡Exportación exitosa!</string>
    <string name="bad_exportation">Error durante la exportación</string>
    <string name="file_name_txt">Pruebas de medidor.txt</string>
    <string name="file_name_html">Registro de medidor.html</string>
    <string name="photo_text">Foto tomada</string>
    <string name="aforo_text"><b>Caudal: </b></string>
    <string name="required">Campo requerido</string>
    <string name="required2">¡Campos requeridos!</string>
    <string name="print_not_connected">No se ha detectado impresora</string>
    <string name="aprobado">Aprobado</string>
    <string name="rechazado">Rechazado</string>
    <string name="new_meter">Nuevo medidor</string>
    <string name="change">Cambiar</string>
    <string name="aforo_calculado">Aforo calculado:</string>
    <string name="kind">Tipo</string>
    <string name="caudal">Mediciones</string>
    <string name="cancelar">Cancelar</string>
    <string name="back">Atrás</string>
    <string name="Exit">Salir</string>
    <string name="aforo_q2">Aforo Q2</string>
    <string name="aforo_q1">Aforo Q1</string>
    <string name="registro_guardado">Registro guardado</string>
    <string name="complete_campos">¡Complete los campos requeridos!</string>
    <string name="kind_r">Tipo:</string>
    <string name="reject_meter">Medidor rechazado</string>
</resources>