<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/sky_700"
        android:orientation="horizontal"
        android:paddingTop="30dp"
        android:paddingBottom="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageButton
            android:id="@+id/bt_back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/ic_back_24"
            android:foregroundGravity="center"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_principal"
            android:textAlignment="center"
            android:textColor="@color/black_500"
            android:textSize="24sp"
            app:flow_verticalAlign="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/bt_exit"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/ic_exit_44"
            android:foregroundGravity="center"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="22dp"
        app:cardBackgroundColor="@color/grey"
        app:cardCornerRadius="20dp"
        app:cardElevation="6dp"
        app:contentPadding="4dp"
        app:contentPaddingLeft="30dp"
        app:contentPaddingRight="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="12dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/bt_1_proof"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prueba_de_medidor"

                app:icon="@drawable/ic_proof_44"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/linearLayout2"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="NotSibling" />

            <Button
                android:id="@+id/bt_2_review"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/revisar_registros"
                app:icon="@drawable/ic_review_44"
                app:layout_constraintTop_toBottomOf="@+id/bt_1_proof" />

            <Button
                android:id="@+id/bt_3_export"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exportar_registros"
                app:icon="@drawable/ic_export_44"
                app:layout_constraintTop_toBottomOf="@+id/bt_2_review" />

            <Button
                android:id="@+id/bt_4_print"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/imprimir"
                app:icon="@drawable/ic_print_44"
                app:layout_constraintTop_toBottomOf="@+id/bt_3_export" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

<!--    <Button-->
<!--        android:id="@+id/bt_5_exit"-->
<!--        style="@style/Widget.MaterialComponents.Button.Icon"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/salir"-->
<!--        app:icon="@drawable/ic_exit_44"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/cv_main" />-->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_0.5_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.63201094" />



</androidx.constraintlayout.widget.ConstraintLayout>